GNOME Bugzilla – Bug 754895
lua-factory: Fix compilation with g-o-a disabled
Last modified: 2015-09-14 16:20:10 UTC
For master and 0.2.x
Created attachment 311164 [details] [review] lua-factory: Fix compilation with g-o-a disabled
Attachment 311164 [details] pushed as fef7219 - lua-factory: Fix compilation with g-o-a disabled