lua-factory: Fix compilation with g-o-a disabled

https://bugzilla.gnome.org/show_bug.cgi?id=754895